--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ android {
 
 ext {
     archLifecycleVersion = '2.4.0'
+    lifeCycleExtensionVersion = '2.2.0'
     activityKtxVersion = "1.4.0"
     swipeRefreshVersion = "1.1.0"
     coreVersion = '1.7.0'
@@ -62,6 +63,12 @@ ext {
     viewPager2Version = '1.0.0'
     preferenceVersion = '1.2.0'
     dataStoreVersion = '1.0.0'
+    mockitoCoreVersion = '4.2.0'
+    coroutineTestVersion = '1.4.1'
+    androidxCoreTestingVersion = '2.1.0'
+    jUnitTestingVersion = '4.13.2'
+    espressoTestingVersion = '3.4.0'
+    androidxTestVersion = "1.4.0"
 }
 
 dependencies {
@@ -85,7 +92,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$archLifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$archLifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$archLifecycleVersion"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifeCycleExtensionVersion"
 
     implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
@@ -107,21 +114,23 @@ dependencies {
     // test related dependencies need to be defined here
     testImplementation "io.insert-koin:koin-test:$koinVersion"
     testImplementation "io.insert-koin:koin-test-junit4:$koinVersion"
-    testImplementation 'org.mockito:mockito-core:4.1.0'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.1'
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.mockito:mockito-core:$mockitoCoreVersion"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutineTestVersion"
+    testImplementation "androidx.arch.core:core-testing:$androidxCoreTestingVersion"
 
-    implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
-    androidTestImplementation "androidx.test:core:1.4.0"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
-    androidTestImplementation "androidx.test:runner:1.4.0"
-    androidTestImplementation "androidx.test:rules:1.4.0"
-    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.4.0"
+    androidTestImplementation "androidx.test:core:$androidxTestVersion"
+    androidTestImplementation "androidx.test:runner:$androidxTestVersion"
+    androidTestImplementation "androidx.test:rules:$androidxTestVersion"
+
+    testImplementation "junit:junit:$jUnitTestingVersion"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation 'org.mockito:mockito-android:2.23.4'
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
+
+    implementation "androidx.test.espresso:espresso-idling-resource:$espressoTestingVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoTestingVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:$espressoTestingVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoTestingVersion"
 
     // Testing Barista
     androidTestImplementation('com.adevinta.android:barista:4.2.0') {
