--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ ext {
     jUnitTestingVersion = '4.13.2'
     espressoTestingVersion = '3.4.0'
     androidxTestVersion = "1.4.0"
+    pagingVersion = "2.1.2"
 }
 
 dependencies {
@@ -84,6 +85,8 @@ dependencies {
     implementation "androidx.viewpager2:viewpager2:$viewPager2Version"
     implementation "androidx.preference:preference-ktx:$preferenceVersion"
     implementation "androidx.datastore:datastore-preferences:$dataStoreVersion"
+    //paging
+    implementation "androidx.paging:paging-runtime:$pagingVersion"
 
     //glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
