--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".presentation.detailtvshow.DetailTvShowActivity"
-            android:theme="@style/AppTheme.App"/>
-        <activity
-            android:name=".presentation.detaimovie.DetailMovieActivity"
+            android:name=".presentation.detail.DetailActivity"
             android:theme="@style/AppTheme.App"/>
         <activity android:name=".presentation.search.SearchActivity"
             android:theme="@style/AppTheme.App"/>
