--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,6 +118,7 @@ dependencies {
     testImplementation "io.insert-koin:koin-test:$koinVersion"
     testImplementation "io.insert-koin:koin-test-junit4:$koinVersion"
     testImplementation "org.mockito:mockito-core:$mockitoCoreVersion"
+    testImplementation 'org.mockito:mockito-inline:4.1.0'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutineTestVersion"
     testImplementation "androidx.arch.core:core-testing:$androidxCoreTestingVersion"
 
@@ -129,6 +130,7 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation 'org.mockito:mockito-android:2.23.4'
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
+
 
     implementation "androidx.test.espresso:espresso-idling-resource:$espressoTestingVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoTestingVersion"
