--- a/core/build.gradle
+++ b/core/build.gradle
@@ -39,6 +39,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    lintOptions {
+        abortOnError false
+    }
     buildFeatures {
         viewBinding true
     }
