--- a/favorite/build.gradle
+++ b/favorite/build.gradle
@@ -35,6 +35,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    lintOptions {
+        abortOnError false
+    }
     buildFeatures {
         viewBinding = true
     }
