--- a/favorite/build.gradle
+++ b/favorite/build.gradle
@@ -25,7 +25,6 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
@@ -39,7 +38,7 @@ android {
         abortOnError false
     }
     buildFeatures {
-        viewBinding = true
+        viewBinding true
     }
 }
 
